[package]
name = "mldec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
bitflags = "1.3.2"
encoding = "0.2.33"
int-enum = "0.5.0"
#num-derive = "0.3.3"
#num = "0.4.0"
#num-traits = "0.2.15"